tooling/nargo_cli/tests/snapshots/execution_success/assert_statement/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: pub Field) {
    assert(x == y, "x and y are not equal");
    assert(x == y, "x and y are not equal");
}
